tests/fixtures/invalid/pow_bool_dict.py
# Cannot call pow() with Bool, Dict[str, int]
x = pow(True, {"a": 1})
